# libcstor

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS  Makefile.am  Makefile.buildx.mk  README.md  RELEASE.md  autogen.sh  build_image.sh  code-standard.md  configure.ac  developer-setup.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: build.yml  pull_request.yml  release.yml
buildscripts/: install-test-dep.sh  install-tool-dep.sh
changelogs/released/v2.3.0-RC1/: 78-shubham14bajpai
changelogs/unreleased/: 63-sgielen  69-shubham14bajpai  70-mittachaitu  71-shubham14bajpai  82-sgielen
cmd/: Makefile.am
cmd/zrepl/: .gitignore  Makefile.am  zrepl.c
docker/: Dockerfile  Dockerfile.arm64  Dockerfile.base  Dockerfile.base.arm64  build  build.sh  cstor-base.Dockerfile  cstor.Dockerfile  entrypoint-poolimage.sh
include/: Makefile.am  data_conn.h  gtest_utils.h  libuzfs.h  mgmt_conn.h  rte_atomic.h  rte_memory.h  rte_ring.h  uzfs_io.h  uzfs_mgmt.h  uzfs_prop.h  uzfs_rebuilding.h  uzfs_test.h  uzfs_zap.h  zrepl_mgmt.h  zrepl_prot.h
include/arch/arm/: Makefile.am  rte_atomic.h  rte_pause.h
include/arch/ppc/: Makefile.am
include/arch/x86/: Makefile.am  rte_atomic.h  rte_atomic_32.h  rte_atomic_64.h
include/generic/: Makefile.am  rte_atomic.h
include/sys/: Makefile.am  uzfs_zvol.h  vdev_disk_aio.h
m4/: debug.m4  headers.m4  user-frame-larger-than.m4
src/: Makefile.am  data_conn.c  libuzfs_handle.c  libuzfs_server.c  mgmt_conn.c  mgmt_conn_ver_5.c  rte_ring.c  uzfs_io.c  uzfs_mgmt.c  uzfs_prop.c  uzfs_rebuilding.c  uzfs_test_mgmt.c  uzfs_zap.c  vdev_disk_aio.c  zrepl_mgmt.c
tests/cbtest/script/: test_uzfs.sh
tests/cstor/script/: test_uzfs.sh
